<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="fill_parent"
	android:background="#FF000000"
	android:orientation="vertical"
 >

	<!-- gallows area -->

	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:background="#FFFFFFFF"
		android:gravity="center"
		android:paddingTop="15dp" >

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:contentDescription="@string/gallows"
			android:paddingLeft="0dp"
			android:paddingTop="0dp"
			android:src="@drawable/android_hangman_gallows" />

		<ImageView
			android:id="@+id/head"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:contentDescription="@string/head"
			android:paddingLeft="108dp"
			android:paddingTop="23dp"
			android:src="@drawable/android_hangman_head" />

		<ImageView
			android:id="@+id/body"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:contentDescription="@string/body"
			android:paddingLeft="120dp"
			android:paddingTop="53dp"
			android:src="@drawable/android_hangman_body" />

		<ImageView
			android:id="@+id/arm1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:contentDescription="@string/arm"
			android:paddingLeft="100dp"
			android:paddingTop="60dp"
			android:src="@drawable/android_hangman_arm1" />

		<ImageView
			android:id="@+id/arm2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:contentDescription="@string/arm"
			android:paddingLeft="120dp"
			android:paddingTop="60dp"
			android:src="@drawable/android_hangman_arm2" />

		<ImageView
			android:id="@+id/leg1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:contentDescription="@string/leg"
			android:paddingLeft="101dp"
			android:paddingTop="90dp"
			android:src="@drawable/android_hangman_leg1" />

		<ImageView
			android:id="@+id/leg2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:contentDescription="@string/leg"
			android:paddingLeft="121dp"
			android:paddingTop="90dp"
			android:src="@drawable/android_hangman_leg2" />
	</RelativeLayout>

	<!-- word spaces -->

	<LinearLayout
		android:id="@+id/word"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="5dp"
		android:background="#FFFFFFFF"
		android:gravity="center"
		android:orientation="horizontal"
		android:padding="10dp" >
	</LinearLayout>

	<!-- letters -->
	<TextView
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:text="Hints"
		android:gravity="center"
		android:textSize="25sp"
		android:layout_marginTop="20dp"
		android:textColor="@color/white"
		android:id="@+id/hintText"
		android:layout_gravity="center_horizontal" />

	<GridView
		android:id="@+id/letters"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginBottom="5dp"
		android:background="#FF000000"
		android:horizontalSpacing="5dp"
		android:numColumns="7"
		android:padding="5dp"
		android:stretchMode="columnWidth"
		android:verticalSpacing="5dp" />

</LinearLayout>